--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "IRC Bot for kaotisk-hund network",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "irc",
