Added repository URL @ package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node index.js",
     "start": "node index.js"
   },
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaotisk-hund/torrent-bot.git"
+  },
   "keywords": [
     "irc",
     "bot",
